--- a/style.scss
+++ b/style.scss
@@ -4,50 +4,38 @@ html body{
     width:100%;
     font-family: Arial, Helvetica, sans-serif;
 }
- 
-main {
-    
-    display: grid;
-    grid-template-columns:1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    
-    
-}
-
 .accueil{
   position :relative;
   margin-top: 0.3%;
-  padding-top: 40%;
-  display: grid;
-  grid-column-start: 1;
-  grid-column-end: -1;
-  grid-row-start: -1;
-  grid-row-end: 1;
+  padding-top: 20%;
+  height: auto;
   background-image: url("https://sportsante13.fr/wp-content/uploads/2019/10/judo-4454836_1280-1170x550.jpg");
-  background-size: 100%;
+  background-size:100%;
   background-repeat: no-repeat;
+ 
   
 }
 .accueil span {
                 font-size: 1em;
                 position:relative;
-                margin-top: -19%;
-                color:white;
-                padding:10px 10px;
+                margin-top: -1%;
+                color:black;
+                padding:1% 1%;
+                flex-wrap: wrap;
 }
            
  h1 {
                 position:relative;
-                font-size: 2,5em;
+                font-size: 0,1rem;
                 padding-left: 1%;
-                margin-top: -30%;
-                color: white;
+                margin-top: -7%;
+                color: black;
             }
 .btn{
                 position:relative;
-                width:15%;
+                width:30%;
                 margin-left:5%;
-                margin-top:-10%;
+                margin-top:-1%;
                 margin-bottom: 3%;
                 border-radius: 30px; 
                 border:none; 
@@ -64,7 +52,7 @@ main {
             }    
 
 aside{
-    width:40%;
+    width:100%;
     background:rgb(230, 232, 232); 
     margin-top:1%;
     padding-top: 2%; 
@@ -73,12 +61,12 @@ aside{
 }
 
 .contact{
-    width:35%;
+    width:100%;
     height: auto;
-    background-color: rgba(255, 255, 255, 0.3);
-    padding:10%;
-    margin-top: 10%;
-    margin-left: 10%;
+    background-color:rgba(255, 255, 255, 0.3);
+    padding:1%;
+    margin-top: 1%;
+    margin-left: 1%;
     border-radius: 20px;
     text-align:center;
     border-left:1px solid  rgba(255, 255, 255, 0.3);
@@ -125,7 +113,7 @@ aside{
     textarea{
         margin-top:5px;
         margin-bottom:30px;
-        width:200px;
+        width:100%;
         background: transparent;
         border:none;
         border-left:1px solid rgba(255, 255, 255, 0.3);
@@ -172,54 +160,8 @@ aside{
             transition:0.3s all;       
 
         }              
-  
-        
-     .drop{
-       background:rgba(255, 255, 255, 0.3);
-       backdrop-filter:blur(10px);
-       -webkit-backdrop-filter: blur(10px);
-       -moz-backdrop-filter:blur(10px);  
-        position:absolute;
-        border-left:1px solid rgba(255, 255, 255, 0.3);
-        border-top:1px solid rgba(255, 255, 255, 0.3);
-        border-radius:10px;
-        box-shadow: 10px 10px 60px -8px rgba(0,0,0,.2);
-         }   
-    .drop-1{
-        height:70px;
-        width:70px;
-        top:-20px;
-        left:-40px;
-        z-index:-1;
-        }
-     .drop-2{
-        height:70px;
-        width:70px;
-        bottom:-30px;
-        right:-20px;
-        z-index:-1;
-        }
-    .drop-3{
-        height:90px;
-        width:90px;
-        bottom:250px;
-        right:-50px;
-        z-index:-1;
-        }   
-     .drop-4{
-        height:80px;
-        width:80px;
-        top:-40px;
-        right:-50px;
-     
-        }
-     .drop-5{
-        height:70px;
-        width:70px;
-        bottom:170px;
-        left:-30px;
-        z-index:-1;
-        } 
+
+    
     .adresse{
         margin-top:30px;
         }
@@ -229,7 +171,7 @@ aside{
     }
 
 article{
-        
+      
         margin-top:10px;
         padding-top:20px;
         margin-right:35px;  
@@ -249,15 +191,10 @@ article{
   .carte {
           position:relative;
           
-          display:grid;
-          grid-template-columns:200px 200px 200px;
-          grid-template-rows:250px 250px;
-          grid-column-start: 2;
-          grid-column-end: 3;
-          grid-row-start: 2;
-          grid-row-end:4 ;
+         
+         
           box-sizing:border-box;
-          max-width :1200px;
+      
           width:100%;
           height:auto;
           justify-content:space-around;
@@ -304,12 +241,13 @@ article{
      
 
     article table{  
+        
               width:100%;
               border-collapse:collapse;
               border:1px solid black;
-              padding-top:40px;
-              margin-top: 50px;
-              margin-left:0px;
+              padding-top:1%;
+              margin-top: 1%;
+             
          }
      thead tr{
             
@@ -335,6 +273,7 @@ article{
               }
      article .event{
           width:100%;
+          flex-wrap:wrap;
           text-align:justify;
           font-weight:bold;
           font-size:small;
@@ -344,51 +283,58 @@ article{
           color:white;
           
           }
-    @media screen and (min-width: 900px){
+  
+ @media screen and (min-width: 900px){
+    main{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr ;
+    }
         .accueil{
-    
             position :relative;
-            margin-top: 0.3%;
-            padding-top: 40%;
             display: grid;
             grid-column-start: 1;
-            grid-column-end: -1;
-            grid-row-start: -1;
-            grid-row-end: 1;
+            grid-column-end: 3;
+            grid-row-start: 1;
+            grid-row-end: 2;
             background-image: url("https://sportsante13.fr/wp-content/uploads/2019/10/judo-4454836_1280-1170x550.jpg");
             background-size: 100%;
             background-repeat: no-repeat;
-            
-          }
+            }
           .accueil span {
-                          font-size: 1em;
                           position:relative;
-                          margin-top: -19%;
-                          color:white;
-                          padding:10px 10px;
+                          font-size: 1em;
+                          margin-top: -15%;
+                          margin-right: 60%;
+                       padding-left: 2%;
+                          color:white;              
           }
                      
            h1 {
                           position:relative;
                           font-size: 2,5em;
-                          padding-left: 1%;
-                          margin-top: -30%;
+                          padding-left: 2%;
+                          margin-top: -23%;
                           color: white;
+                          
                       }
           .btn{
                           position:relative;
-                          width:15%;
-                          margin-left:5%;
-                          margin-top:-10%;
-                          margin-bottom: 3%;
+                          display: grid;
+                          grid-column-start: 1;
+                          grid-column-end: 2;
+                          grid-row-start: 1;
+                          grid-row-end: 2;
+                          margin-left:1%;
                           border-radius: 30px; 
                           border:none; 
                           text-decoration: none;
-                          color:white; 
+                          color:black; 
                           background:rgba(255, 255, 255, 0.3);
                           backdrop-filter:blur(10px);
                           -webkit-backdrop-filter: blur(10px);
-                          -moz-backdrop-filter:blur(10px);              
+                          -moz-backdrop-filter:blur(10px);   
+                                   
                       }  
           .btn:hover{
                           text-decoration: none;
@@ -396,20 +342,25 @@ article{
                       }    
           
           aside{
-      
+            display: grid;
+            grid-column-start: 1;
+            grid-column-end: 2;
+            grid-row-start:2;
+            grid-row-end: 3;
               background:rgb(230, 232, 232); 
-              margin-top:1%;
-              padding-top: 2%; 
-              text-align:center;  
+              margin-top:5%;
+              padding-top: 15%; 
+              text-align:center; 
+     
               
           }
           
           .contact{
-              width:73%;
-              height:auto;
+              width:80%;
               background-color: rgba(255, 255, 255, 0.3);
               padding:10%;
-              margin-top: 10%;
+              padding-left: 5%;
+              margin-top: 20%;
               margin-left: 10%;
               border-radius: 20px;
               text-align:center;
@@ -428,6 +379,7 @@ article{
                        }
               form { 
                   position:relative;
+                 
                   }
               form input {
                   margin:3%;
@@ -477,8 +429,8 @@ article{
                      
                         
               .container #aside .contact form a{
-                  margin-top:30px;
-                  margin-bottom:20px;
+                  margin-top:40px;
+                  margin-bottom:30px;
                   background: transparent;
                   border:none;
                   border-left:1px solid rgba(255, 255, 255, 0.3);
@@ -560,13 +512,30 @@ article{
               }
           
           article{
-                  
-                  margin-top:10px;
-                  padding-top:20px;
+                  display: grid;
+              
+                  grid-column-start: 2;
+                  grid-column-end: 3;
+                  grid-row-start: 2;
+                  grid-row-end: 5;
+                  margin-top:1px;
+                  padding-top:2px;
                   margin-right:35px;  
                   width:100%;
                                 
               } 
+              article h2{
+                 display: grid;
+                 grid-column-start: 2;
+                 grid-column-end: 3;
+                 grid-row-start: 2;
+                 grid-row-end: 3;
+                 text-transform: uppercase ;
+                 text-align: center;
+                 font-weight: bold;     
+                 color:#565758;
+                     }
+              
               .carte {
                 position:relative;
                 display:grid;
@@ -575,19 +544,17 @@ article{
                 grid-column-start: 2;
                 grid-column-end: 3;
                 grid-row-start: 2;
-                grid-row-end:4 ;
+                grid-row-end:3;
                 box-sizing:border-box;        
                 height:auto;
                 justify-content:space-around;
                 grid-gap:40px 30px;
                 margin:30px 10px;
-            
+                margin-top:10%;
                 cursor:pointer;
-                overflow-wrap: break-word;
-                
+                overflow-wrap: break-word; 
                }
-       
-                     
+                            
                article .carte .card{
                   box-shadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
                   -webkit-boxshadow: 9px 10px 7px 2px rgba(107,104,104,0.35);
@@ -599,7 +566,6 @@ article{
                     transform:scale(1.1);
                     transition :0.1 s all;
                        }
-                 
       
               .card_title{
                display:flex;
@@ -618,41 +584,40 @@ article{
                padding:15px;
                background: #fafafa;
                text-align: justify;   
-             }    
-           article h2{
-                   text-transform: uppercase ;
-                   text-align: center;
-                   font-weight: bold;
-                   margin: 5px 0;
-                   padding-bottom: 10px;  
-                   color:#565758;
-                 }
-               
-            
-          
+             }  
+
               article table{  
-                        width:100%;
+           
+                        display:grid; 
+                        grid-column-start: 2;
+                        grid-column-end: 3;
+                        grid-row-start: 3;
+                        grid-row-end:4 ;    
+                        margin-top: 3%;
                         border-collapse:collapse;
                         border:1px solid black;
-                        padding-top:40px;
-                        margin-top: 50px;
-                        margin-left:0px;
-                   }
-               thead tr{
+                   
+                    
                       
-                       text-align:center;
+                   }
+               thead tr th{
+                  
                        background-color:#d4d4d4bb;
                       
                         }
                tbody th{
+         
                       font-weight:bold;
+                      flex-wrap: wrap;
                         }
           
                th,td{
+            
                        text-align:center;
                     }
                tbody tr,td,th{
-                    border:1px solid #b3afaf;
+                    width: 300px;
+                  
                        }
                tbody tr:nth-child(even){
                     background-color: #f1f0f0;
@@ -661,13 +626,18 @@ article{
                     border-bottom:#d4d4d4bb;
                         }
                article .event{
-                    width:100%;
+                  
+                    flex-wrap: wrap;
+                    display:grid; 
+                    grid-column-start: 2;
+                    grid-column-end: 3;
+                    grid-row-start: 4;
+                    grid-row-end:5 ;
+                   margin-top:-0.1px;
                     text-align:justify;
                     font-weight:bold;
                     font-size:small;
-                    margin:20px 0px;
                     background: red;
-                    padding:5px;
                     color:white;
                   }  
              }
