--- a/design.css
+++ b/design.css
@@ -1,7 +1,7 @@
 html body {
   padding: 0;
   margin: 0;
-  width: 100%;
+  width: 90%;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -589,7 +589,7 @@ article .event {
   article table {
     display: grid;
     grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 4;
     margin-top: 3%;
@@ -598,6 +598,7 @@ article .event {
   }
 
   thead tr th {
+    width: 100vw;
     background-color: #d4d4d4bb;
   }
 
