--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,9 @@
 html body{
     padding:0;
     margin:0;
-    width:100%;
+    width:90%;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 .accueil{
   position :relative;
@@ -590,7 +591,7 @@ article{
            
                         display:grid; 
                         grid-column-start: 2;
-                        grid-column-end: 3;
+                        grid-column-end: 4;
                         grid-row-start: 3;
                         grid-row-end:4 ;    
                         margin-top: 3%;
@@ -601,7 +602,7 @@ article{
                       
                    }
                thead tr th{
-                  
+                       width: 100vw;
                        background-color:#d4d4d4bb;
                       
                         }
