--- a/design.css
+++ b/design.css
@@ -11,7 +11,7 @@ html body {
   padding-top: 20%;
   height: auto;
   background-image: url("https://sportsante13.fr/wp-content/uploads/2019/10/judo-4454836_1280-1170x550.jpg");
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
@@ -19,7 +19,7 @@ html body {
   font-size: 1em;
   position: relative;
   margin-top: -1%;
-  color: black;
+  color: white;
   padding: 1% 1%;
   flex-wrap: wrap;
 }
@@ -29,12 +29,12 @@ h1 {
   font-size: 0, 1rem;
   padding-left: 1%;
   margin-top: -7%;
-  color: black;
+  color: white;
 }
 
 .btn {
   position: relative;
-  width: 30%;
+  width: fit-content;
   margin-left: 5%;
   margin-top: -1%;
   margin-bottom: 3%;
@@ -63,7 +63,7 @@ aside {
 
 .contact {
   width: 100%;
-  height: auto;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.3);
   padding: 1%;
   margin-top: 1%;
@@ -87,6 +87,7 @@ aside {
 
 form {
   position: relative;
+  height: 100%;
 }
 
 form input {
@@ -96,13 +97,13 @@ form input {
   border-left: 1px solid rgba(255, 255, 255, 0.3);
   border-top: 1px solid rgba(255, 255, 255, 0.3);
   padding: 0.5rem;
-  width: 100%;
+  width: 90%;
   border-radius: 50px;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   -moz-backdrop-filter: blur(5px);
-  box-shadow: 4px 4px 60px rgba(0, 0, 0, 0.2);
-  color: white;
+  box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.2);
+  color: black;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
@@ -116,21 +117,18 @@ form input:hover {
 }
 
 textarea {
-  margin-top: 5px;
-  margin-bottom: 30px;
-  width: 100%;
+  margin-bottom: 5%;
+  width: 90%;
   background: transparent;
   border: none;
   border-left: 1px solid rgba(255, 255, 255, 0.3);
   border-top: 1px solid rgba(255, 255, 255, 0.3);
-  padding: 0.8rem;
-  width: 200px;
   border-radius: 10px;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   -moz-backdrop-filter: blur(5px);
   box-shadow: 4px 4px 60px rgba(0, 0, 0, 0.2);
-  color: white;
+  color: black;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
@@ -139,13 +137,17 @@ textarea:hover {
 }
 
 .container #aside .contact form a {
-  margin-top: 30px;
-  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  width: 50%;
+  height: 10%;
+  margin-left: 25%;
   background: transparent;
   border: none;
   border-left: 1px solid rgba(255, 255, 255, 0.3);
   border-top: 1px solid rgba(255, 255, 255, 0.3);
-  padding: 1.5rem;
   text-transform: uppercase;
   border-radius: 20px;
   backdrop-filter: blur(5px);
@@ -161,7 +163,7 @@ textarea:hover {
   background-color: #09f54466;
   text-decoration: none;
   cursor: pointer;
-  transition: 0.3s all;
+  transition: 0.1s all;
 }
 
 .adresse {
@@ -191,12 +193,13 @@ article h2 {
 
 .carte {
   position: relative;
-  box-sizing: border-box;
   width: 100%;
-  height: auto;
-  justify-content: space-around;
-  grid-gap: 40px 30px;
-  margin: 30px 10px;
+  height: 60%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 5% 10%;
+  margin-bottom: 20%;
+  margin-top: 5%;
   cursor: pointer;
   overflow-wrap: break-word;
 }
@@ -278,7 +281,7 @@ article .event {
   color: white;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1200px) {
   main {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -325,7 +328,7 @@ article .event {
     border-radius: 30px;
     border: none;
     text-decoration: none;
-    color: black;
+    color: white;
     background: rgba(255, 255, 255, 0.3);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
@@ -351,6 +354,7 @@ article .event {
 
   .contact {
     width: 80%;
+    height: auto;
     background-color: rgba(255, 255, 255, 0.3);
     padding: 10%;
     padding-left: 5%;
@@ -405,7 +409,7 @@ article .event {
 
   textarea {
     margin-top: 5px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     width: 100%;
     background: transparent;
     border: none;
@@ -426,15 +430,13 @@ article .event {
   }
 
   .container #aside .contact form a {
-    margin-top: 40px;
-    margin-bottom: 30px;
+    width: 50%;
     background: transparent;
     border: none;
     border-left: 1px solid rgba(255, 255, 255, 0.3);
     border-top: 1px solid rgba(255, 255, 255, 0.3);
-    padding: 1.5rem;
     text-transform: uppercase;
-    border-radius: 20px;
+    border-radius: 10px;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     -moz-backdrop-filter: blur(5px);
@@ -537,6 +539,8 @@ article .event {
 
   .carte {
     position: relative;
+    width: 100%;
+    padding-left: 0%;
     display: grid;
     grid-template-columns: 200px 200px 200px;
     grid-template-rows: 250px 250px;
