--- a/activites.css
+++ b/activites.css
@@ -3,5 +3,21 @@ html body{
     margin:0;
     width:90%;
     font-family: Arial, Helvetica, sans-serif;
-    background: red;
+    background:blue;
 }
+
+main{
+    width:90%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+main .evenement{
+text-transform: uppercase ;
+margin:20px 0;
+font-size: 2rem ;
+font-weight: 600;
+}
+
